HelpMePlay | 1.0.5
	Features:
		S Tier Anima Powers in Torghast are now automatically chosen based on the higher ranked power. (Players will need to opt in for this feature.)
		Repairing at a merchant is now automatically handled.
		Added support for adding achievement criteria info to the tooltips of creatures, items, and objects. (The database supporting this feature will expand over time.)
	Quests:
		Added a glow to the corresponding button during the "Dead Drop" quest in Bastion.
		Added a glow to the corresponding button during the "Just Winging It" world quest in Maldraxxus.
		Added a glow to the corresponding button during the "We'll Make an Aspirant Out of You" world quest in Bastion.
	Dialog:
		Added a dialog to skip the Covenant introduction for Night Fae.
		Added a dialog for the NPCs involved in the "Insider Trading" quest in Oribos.
		Added a dialog for Project Lead Allen in Maldraxxus.
		Added a dialog for the Taloned Flayedwing in Maldraxxus.
		Added a dialog for Dapperdew.
		Added a dialog for Cortinarius.
		Added a dialog for Marasmius.
		Added multiple dialogs for NPCs involved in the Night Fae Campaign.
		Added multiple dialogs for Ve'rayn.
		Added multiple dialogs for Shandris Feathermoon.
		Added dialogs for multiple NPCs in Torghast.
		Added dialogs for multiple NPCs in The Maw for the Night Fae assault.
		Added multiple dialogs for Zayhad, The Builder.
		Added support for more Stable Masters (and healing battle pets.)
		Added multiple dialogs for the Sparring Aspirants involved in the "Let's Get Ready to Humble" world quest.
		Added multiple dialogs for the NPCs involved in the "We'll Workshop It" world quest.
	Notes:
		Added a note for exposing the Exposed Boggarts during the "Tough Crowd" world quest in Ardenweald.
	Fixes:
		Fixed an issue where sometimes the merchant ID would be nil and toss an error.
		Fixed an issue that caused the merchant window to open when speaking with Stable Masters.